--- a/index.html
+++ b/index.html
@@ -2,10 +2,44 @@
 <html>
 <head>
     <title></title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="dist/css/app.css" />
 </head>
 <body>
-    <div id="app"></div>
-
+    <div id="app" class="main-container">
+        <div class="model-container">
+            <div class="loading"></div>
+            <div class="overlays"></div>
+            <div class="model"></div>
+            <div class="controls">
+                <div class="animation-controls section">
+                    <div class="timeline">
+                        <div class="timeline-wrapper">
+                            <div class="track">
+                                <div class="bar">
+                                </div>
+                                <div class="knob" style="transition: none; transform: translateX(712.574px);">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="control play"><i class="material-icons">play_arrow</i></a>
+                    <div class="animation-timer control progress help" data-unit="time">
+                        <div class="tooltip tooltip-up">Click to switch to frames.</div>
+                        <p class="time">01:34</p>
+                    </div>
+                </div>
+                <div class="spacer"></div>
+                <div class="main-controls section">
+                    <a class="control help"><i class="material-icons">help</i></a>
+                    <a class="control settings"><i class="material-icons">settings</i></a>
+                    <a class="control vr"><i class="material-icons">confirmation_number</i></a>
+                    <a class="control theatre"><i class="material-icons">aspect_ratio</i></a>
+                    <a class="control fullscreen"><i class="material-icons">fullscreen</i></a>
+                </div>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="dist/js/vendors.js"></script>
     <script type="text/javascript" src="dist/js/app.js"></script>
 </body>
